--- a/resources/js/src/locales/en.json
+++ b/resources/js/src/locales/en.json
@@ -5,7 +5,7 @@
         "contact": "Contact"
     },
     "home": {
-        "search": "Search",
+        "search": "Type the name of a dish",
         "name": "LAZARE'S CHICKEN BBQ HOUSE",
         "title": "FRESH & TASTY HALAL BBQ BARBCUE HALAL FRAIS ET SAUQUREUX"
     },
